# nebula-xi-dev

./: CMakeLists.txt  CMakePresets.json  README.md
include/dev/: dev_base.h  dev_gpio.h  dev_i2c.h  dev_sdram.h  dev_spi.h
nebulaxi/dev/: dev_base.h  dev_gpio.h  dev_i2c.h  dev_sdram.h  dev_spi.h
tests/: CMakeLists.txt
tests/test_dev_gpio/: CMakeLists.txt  test_dev_gpio.cpp
tests/test_dev_i2c/: CMakeLists.txt  test_dev_i2c.cpp
tests/test_dev_sdram/: CMakeLists.txt  test_dev_sdram.cpp
tests/test_dev_spi/: CMakeLists.txt  test_dev_spi.cpp
